--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.jamesward</groupId>
+        <groupId>com.cloudbees</groupId>
         <artifactId>multi</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
